@@ -6,14 +6,15 @@ import io.jsonwebtoken.*;
 import io.jsonwebtoken.io.Decoders;
 import io.jsonwebtoken.security.Keys;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
+import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.stereotype.Service;
-import org.springframework.validation.ObjectError;
 
 import java.security.Key;
 import java.util.*;
@@ -24,11 +25,15 @@ import java.util.stream.Collectors;
 public class TokenProvider {
     private static final String AUTHORITIES_KEY = "auth";
     private static final String BEARER_TYPE = "Bearer ";
-    private static final long ACCESS_TOKEN_EXPIRE_TIME = 1000 * 60 * 30;            // 30분
+//    private static final long ACCESS_TOKEN_EXPIRE_TIME = 1000 * 60 * 30;            // 30분
+    private static final long ACCESS_TOKEN_EXPIRE_TIME = 1000 * 10;  // 10초
     private static final long REFRESH_TOKEN_EXPIRE_TIME = 1000 * 60 * 60 * 24 * 3;  // 3일
 //    private static final long REFRESH_TOKEN_EXPIRE_TIME = 1000 * 10;  // 10초
 
     private final Key key;
+
+    @Autowired
+    private StringRedisTemplate redisTemplate;
 
     public TokenProvider(@Value("${jwt.secret}") String secretKey) {
         byte[] keyBytes = Decoders.BASE64.decode(secretKey);
@@ -46,7 +51,7 @@ public class TokenProvider {
             // 만료된 JWT 토큰
             throw new UnauthorizedException();
         } catch (UnsupportedJwtException e) {
-            // 지원되지 않는 JWT 토큰입
+            // 지원되지 않는 JWT 토큰
             throw new UnauthorizedException();
         } catch (IllegalArgumentException e) {
             // JWT 토큰이 잘못됨
@@ -55,6 +60,12 @@ public class TokenProvider {
     }
 
     public TokenDto generateTokenDto(Authentication authentication) {
+//        UserDetails userDetails = (UserDetails) authentication.getPrincipal();
+//        String id = userDetails.getUsername();
+//        String authorities = authentication.getAuthorities().stream()
+//                .map(GrantedAuthority::getAuthority)
+//                .collect(Collectors.joining(","));
+//        String userKey = id + authorities;
 
         long now = (new Date()).getTime();
 
@@ -63,6 +74,10 @@ public class TokenProvider {
 
         // Refresh Token 생성
         String refreshToken = generateRefreshToken(authentication, now);
+
+//        ValueOperations<String, String> ops = redisTemplate.opsForValue();
+//        Duration expireDuration = Duration.ofMillis(REFRESH_TOKEN_EXPIRE_TIME);
+//        ops.set(userKey, refreshToken, expireDuration.getSeconds());
 
         return TokenDto.builder()
                 .grantType(BEARER_TYPE)
@@ -74,7 +89,7 @@ public class TokenProvider {
     public Authentication getAuthentication(String accessToken) {
         // 토큰 복호화
         Claims claims = parseClaims(accessToken);
-        String type = (String) claims.get("type");
+//        String type = (String) claims.get("type");
 
         if (claims.get(AUTHORITIES_KEY) == null) {
             throw new UnauthorizedException();
@@ -84,21 +99,13 @@ public class TokenProvider {
         Collection<? extends GrantedAuthority> authorities =
                 Arrays.stream(claims.get(AUTHORITIES_KEY).toString().split(","))
                         .map(SimpleGrantedAuthority::new)
-                        .collect(Collectors.toList());
+                        .toList();
 
         // UserDetails 객체를 만들어서 Authentication 리턴
         UserDetails principal = new org.springframework.security.core.userdetails.User(claims.getSubject(), "", authorities);
 
         Authentication authentication = new UsernamePasswordAuthenticationToken(principal, "", authorities);
 
-        if(type.equals("refresh")){
-            long now = (new Date()).getTime();
-
-            List<ObjectError> list = new ArrayList<>();
-            list.add(new ObjectError("message", "새로운 토큰 발행"));
-            list.add(new ObjectError("accessToken", generateAccessToken(authentication, now)));
-//            throw new CustomException("420", list);
-        }
         return authentication;
     }
 
@@ -121,7 +128,6 @@ public class TokenProvider {
         return Jwts.builder()
                 .setSubject(id)
                 .claim(AUTHORITIES_KEY, authorities)
-                .claim("type", "access")
                 .setExpiration(accessTokenExpiresIn)
                 .signWith(key, SignatureAlgorithm.HS256)
                 .compact();
@@ -138,7 +144,6 @@ public class TokenProvider {
         return Jwts.builder()
                 .setSubject(id)
                 .claim(AUTHORITIES_KEY, authorities)
-                .claim("type", "refresh")
                 .setExpiration(new Date(now + REFRESH_TOKEN_EXPIRE_TIME))
                 .signWith(key, SignatureAlgorithm.HS256)
                 .compact();
